--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ header.fixed #logo {
 
 #top {
   width: 100%;
-  background-image: url(https://i.yapx.ru/OyUg1.gif);
+  background-image: url(	https://images3.alphacoders.com/114/1147809.jpg);
   background-blend-mode: multiply;
   background-color: #616161;
   background-size: cover;
