--- a/css/main.css
+++ b/css/main.css
@@ -71,10 +71,10 @@ header #logo span {
   margin-bottom: 10px;
 }
 
-#about > a {color: #fff}
+#about > a {color: #e6eceb}
 
 #about > a:hover {
-  color: #fff;
+  color: #e6eceb;
   text-decoration: underline;
 }
 
@@ -86,27 +86,27 @@ header #logo span {
 
 .fixed {
   z-index: 5000;
-  background-color: #410a0a;
-  border-bottom: 1px solid #9c820d;
+  background-color: #005f89;
+  border-bottom: 1px solid #005f89;
 }
 
 header.fixed #logo {
-  color: #fff;
+  color: #e6eceb;
 }
 
-.fixed #about a {color: #fff}
-.fixed #about a:hover {color: #fff}
+.fixed #about a {color: #e6eceb}
+.fixed #about a:hover {color: #e6eceb}
 
 /* Главный блок на сайте */
 
 #top {
 width: 100%;
-  background-image: url(https://images3.alphacoders.com/114/1147809.jpg);
-  background-blend-mode: multiply;
-  background-color: #616161;
+  background-image: url(https://psv4.userapi.com/c536436/u506838934/docs/d2/cfa74c9c556c/gull2.gif?extra=p_Zx-4Vw7WC0-OqJ5dOJVtpNR4s8QI3UAuQNAZYcSe0czSPTA9ZwwzyUnKjsbKkg2toUaeEUIHtZXgzrznvaM84g_aLPWrAy0q4rfKnA-0Tstw4PT1k_r4M8sRPhDAYWVIkWNiu-Y87S4mpkptq5_8UP);
+  background-blend-mode: ;
+  background-color: #005f89;
   background-size: cover;
   text-align: center;
-  color: #fff;
+  color: #e6eceb;
 }
 
 @media (min-width: 1001px) {
@@ -142,16 +142,16 @@ width: 100%;
 }
 
 #top h3 {
-  color: #ccc;
+  color: #e6eceb;
 }
 
 /* Блок с возможностями */
 
 #main {
   float: left;
-  background-color: #410a0a;
-  border-top: 6px solid #615105;
-  color: #9c820d;
+  background-color: #005f89;
+  border-top: 6px solid #005f89;
+  color: #e6eceb;
   font-size: 1.3em;
 }
 
@@ -183,13 +183,21 @@ width: 100%;
 }
 
 #main h2 {font-size: 3em}
-#main span {color: #9c820d}
+#main span {color: #e6eceb}
 
+#main img {
+  background: #e6eceb;
+  padding: 5px;
+  border: 2px solid #e6eceb;
+  float: left;
+  width: 100%;
+  max-width: 500px;
+}
 /*  */
 
 #overview {
   float: left;
-  background-image: url(https://lunetas.com.br/wp-content/uploads/2021/01/soul-filme-portal-lunetas.jpg.webp);
+  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d42/36fceed86825/ptichka.gif?extra=Cpdb9Y9cPDtk8gkqfQyFBpOhVuWOZV1Y69wpEIdVp8_OcTp92yxBWiMdw07eRlgsjOEN63NhwcDoSO_CSA6CkQTox2JgMjTHeY9tXYZoyOIdAqzON57QXQaW6qc2sfAkgaROd8vhWIiOAQ9J8F1PSX6e);
 
   background-blend-mode: multiply;
   background-color: #403f40;
@@ -199,7 +207,7 @@ width: 100%;
   padding: 100px 0;
   width: 100%;
   text-align: center;
-  color: #fff;
+  color: #e6eceb;
 }
 
 #overview h2 {font-size: 4em}
@@ -227,7 +235,7 @@ width: 100%;
 #overview img {
   background: #fafafa;
   padding: 5px;
-  border: 2px solid silver;
+  border: 2px solid #e6eceb;
   float: left;
   width: 100%;
   max-width: 500px;
@@ -251,9 +259,9 @@ width: 100%;
 /* контакты*/
 #contacts {
   float: left;
-  background-color: #410a0a;
-  border-top: 2px solid #410a0a;
-  color: #9c820d;
+  background-color: #005f89;
+  border-top: 2px solid #005f89;
+  color: #e6eceb;
   font-size: 1.3em;
 }
 
@@ -285,20 +293,28 @@ width: 100%;
 }
 
 #contacts h3 {font-size: 3em}
-#contacts span {color: #9c820d}
+#contacts span {color: #e6eceb}
+#contacts img {
+  background: #fafafa;
+  padding: 5px;
+  border: 2px solid #e6eceb;
+  float: left;
+  width: 100%;
+  max-width: 500px;
+}
 
 /*  */
 
 #faq {
-  background-image: url(https://i.insider.com/5b7b185d3cccd123008b457a?width=1000&format=jpeg&auto=webp);
+  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/f0b94014f221/vyglyadyvae.gif?extra=Q4i3gP6yAhp6NrgITp-beXuftN1JPKkMz5TAyZpsQbjKGdNei4ePLMLD2RgWRpf4fQN3tWRFKQqYY9dx805kZD9nVL8E7Siv08eefNthignKAPpD4oL2-oikUcIEm8Gy3_FnjqOKfjF_YI4ePcDBGFt0);
   background-blend-mode: multiply;
   background-color: #616161;
   background-size: cover;
-  border-top: 2px solid #410a0a;
+  border-top: 2px solid #005f89;
   width: 100%;
   float: left;
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 100px;
+  padding-bottom: 600px;
 }
 
 @media (min-width: 801px) {
@@ -308,6 +324,7 @@ width: 100%;
     float: left;
   }
 }
+
 
 @media (max-width: 800px) {
   #faq div {
@@ -326,7 +343,7 @@ width: 100%;
 
 #faq .heading {
   color: #b7b7b7;
-  font-size: 1.3em;
+  font-size: 1.6em;
   font-weight: bold;
 }
 
@@ -337,3 +354,41 @@ width: 100%;
   font-size: 0.95em;
   margin-bottom: 40px;
 }
+/* контакты*/
+#contacts2 {
+  float: left;
+  background-color: #005f89;
+  border-top: 2px solid #005f89;
+  color: #e6eceb;
+  font-size: 1.3em;
+}
+
+@media (min-width: 1401px) {
+  #contacts2 {
+    padding: 100px 20%;
+    width: 60%;
+  }
+}
+
+@media (max-width: 1400px) {
+  #contacts2 {
+    padding: 100px 10%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 700px) {
+  #contacts2 div {
+    width: 98%!important;
+    margin-bottom: 20px;
+  }
+}
+
+#contacts2 div {
+  width: 48%;
+  margin-right: 2%;
+  float: left;
+}
+
+#contacts2 h3 {font-size: 3em}
+#contacts2 span {color: #e6eceb}
