--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,8 @@ header.fixed #logo {
 
 #top {
 width: 100%;
-  background-image: url(https://psv4.userapi.com/c536436/u506838934/docs/d2/cfa74c9c556c/gull2.gif?extra=p_Zx-4Vw7WC0-OqJ5dOJVtpNR4s8QI3UAuQNAZYcSe0czSPTA9ZwwzyUnKjsbKkg2toUaeEUIHtZXgzrznvaM84g_aLPWrAy0q4rfKnA-0Tstw4PT1k_r4M8sRPhDAYWVIkWNiu-Y87S4mpkptq5_8UP);
+  background-image: url(https://psv4.userapi.com/c536436/u506838934/docs/d15/8caa0adedb8e/seagull.gif?extra=y4V3kiTkDw-d0Cr4HBFZoubd2wQPsllE9gl8cgzA8P7sHWxid2SxERTPYw0Cei3YmOKKyWn6n06LM1dNK6Z_ocwRSVq8jge7nmIi2R9OjWMR51nsdOuZLSYsm8aE5D-5_hS_dQXTIaq9goKlA-Ws6J7r
+    );
   background-blend-mode: ;
   background-color: #005f89;
   background-size: cover;
@@ -306,7 +307,7 @@ width: 100%;
 /*  */
 
 #faq {
-  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/f0b94014f221/vyglyadyvae.gif?extra=Q4i3gP6yAhp6NrgITp-beXuftN1JPKkMz5TAyZpsQbjKGdNei4ePLMLD2RgWRpf4fQN3tWRFKQqYY9dx805kZD9nVL8E7Siv08eefNthignKAPpD4oL2-oikUcIEm8Gy3_FnjqOKfjF_YI4ePcDBGFt0);
+  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/ea6150a668c6/vyglyadyvae.gif?extra=akP8vTWDHCSB2YN3jGX9hpFwsJ5vxhPul3YQNC9YvIHLxKPjjJ8guK1js61fmQnp5SUs7_btRUcRmcEfv8eRj2el-NheWBvTCxLd9T_Tuv8oZQK72-9EEVKc1JUgCdrBlih2u92H_6BtFTuufMDIfhEs);
   background-blend-mode: multiply;
   background-color: #616161;
   background-size: cover;
