--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ width: 100%;
 
 /* Блок о нас */
 
-#Onas {
+#main {
   float: left;
   background-color: #005f89;
   border-top: 6px solid #005f89;
@@ -157,36 +157,36 @@ width: 100%;
 }
 
 @media (min-width: 1401px) {
-  #Onas {
+  #main {
     padding: 100px 20%;
     width: 60%;
   }
 }
 
 @media (max-width: 1400px) {
-  #Onas {
+  #main {
     padding: 100px 10%;
     width: 80%;
   }
 }
 
 @media (max-width: 700px) {
-  #Onas div {
+  #main div {
     width: 98%!important;
     margin-bottom: 20px;
   }
 }
 
-#Onas div {
+#main div {
   width: 48%;
   margin-right: 2%;
   float: left;
 }
 
-#Onas h2 {font-size: 3em}
-#Onas span {color: #e6eceb}
+#main h2 {font-size: 3em}
+#main span {color: #e6eceb}
 
-#Onas img {
+#main img {
   background: #e6eceb;
   padding: 5px;
   border: 2px solid #e6eceb;
@@ -194,7 +194,7 @@ width: 100%;
   width: 100%;
   max-width: 500px;
 }
-/* Процесс создания */
+/*  */
 
 #overview {
   float: left;
@@ -257,7 +257,7 @@ width: 100%;
   }
 }
 
-/*чем занимаемся*/
+/*чем занимаем*/
 #What {
   float: left;
   background-color: #005f89;
@@ -267,35 +267,35 @@ width: 100%;
 }
 
 @media (min-width: 1401px) {
-  #What {
+  #contacts {
     padding: 100px 20%;
     width: 60%;
   }
 }
 
 @media (max-width: 1400px) {
-  #What {
+  #contacts {
     padding: 100px 10%;
     width: 80%;
   }
 }
 
 @media (max-width: 700px) {
-  #What div {
+  #contacts div {
     width: 98%!important;
     margin-bottom: 20px;
   }
 }
 
-#What div {
+#contacts div {
   width: 48%;
   margin-right: 2%;
   float: left;
 }
 
-#What h3 {font-size: 3em}
-#What span {color: #e6eceb}
-#What img {
+#contacts h3 {font-size: 3em}
+#contacts span {color: #e6eceb}
+#contacts img {
   background: #fafafa;
   padding: 5px;
   border: 2px solid #e6eceb;
@@ -304,9 +304,9 @@ width: 100%;
   max-width: 500px;
 }
 
-/*Блок с работами*/
+/*  */
 
-#work {
+#faq {
   background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/ea6150a668c6/vyglyadyvae.gif?extra=akP8vTWDHCSB2YN3jGX9hpFwsJ5vxhPul3YQNC9YvIHLxKPjjJ8guK1js61fmQnp5SUs7_btRUcRmcEfv8eRj2el-NheWBvTCxLd9T_Tuv8oZQK72-9EEVKc1JUgCdrBlih2u92H_6BtFTuufMDIfhEs);
   background-blend-mode: multiply;
   background-color: #616161;
@@ -319,7 +319,7 @@ width: 100%;
 }
 
 @media (min-width: 801px) {
-  #work div {
+  #faq div {
     width: 25%;
     margin-left: 6%;
     float: left;
@@ -328,27 +328,27 @@ width: 100%;
 
 
 @media (max-width: 800px) {
-  #work div {
+  #faq div {
     width: 80%;
     margin-left: 10%;
     float: left;
   }
 }
 
-#work .title {
+#faq .title {
   font-weight: lighter;
   color: #fff;
   margin-bottom: 20px;
   font-size: 2.2em;
 }
 
-#work .heading {
+#faq .heading {
   color: #b7b7b7;
   font-size: 1.6em;
   font-weight: bold;
 }
 
-#work p {
+#faq p {
   font-family: 'Amatic SC', serif;
   -webkit-font-smoothing: antialiased;
   color: #fff;
