--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,7 @@ width: 100%;
 }
 
 /*чем занимаем*/
-#What {
+#contacts {
   float: left;
   background-color: #005f89;
   border-top: 2px solid #005f89;
