--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,7 @@ header.fixed #logo {
 
 #top {
 width: 100%;
-  background-image: url(https://psv4.userapi.com/c536436/u506838934/docs/d15/8caa0adedb8e/seagull.gif?extra=y4V3kiTkDw-d0Cr4HBFZoubd2wQPsllE9gl8cgzA8P7sHWxid2SxERTPYw0Cei3YmOKKyWn6n06LM1dNK6Z_ocwRSVq8jge7nmIi2R9OjWMR51nsdOuZLSYsm8aE5D-5_hS_dQXTIaq9goKlA-Ws6J7r
-    );
+  background-image: url(https://vk.com/doc506838934_621681386?hash=cbe88a0ca09e86a7a9&dl=ef868e50e72579392e&wnd=1&module=im);
   background-blend-mode: ;
   background-color: #005f89;
   background-size: cover;
@@ -307,7 +306,7 @@ width: 100%;
 /* Наши работы */
 
 #faq {
-  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/ea6150a668c6/vyglyadyvae.gif?extra=akP8vTWDHCSB2YN3jGX9hpFwsJ5vxhPul3YQNC9YvIHLxKPjjJ8guK1js61fmQnp5SUs7_btRUcRmcEfv8eRj2el-NheWBvTCxLd9T_Tuv8oZQK72-9EEVKc1JUgCdrBlih2u92H_6BtFTuufMDIfhEs);
+  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d30/a76dd16d0f56/vyglyadyvae.gif?extra=8H5RvOrV2vd6I0pRlqJ17eyFgZpAXw0vnO_nyaOvKGbfxAPvwrjHU-0bwqZN62GfxEdU8wx5L6OxduX1ZNYIMO6ABiVVcJAf_QkUtyfZJDMRXEnnIb86YM7hWJNIvrLYPgAAZgnj5cEFJkb55Ok9TWg);
   background-blend-mode: multiply;
   background-color: #616161;
   background-size: cover;
