--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ header.fixed #logo {
 
 #top {
 width: 100%;
-  background-image: url(https://vk.com/doc506838934_621681386?hash=cbe88a0ca09e86a7a9&dl=ef868e50e72579392e&wnd=1&module=im);
+  background-image: url(https://vk.com/doc506838934_621678169?hash=hz8z9pJ0uDflS0lvHKKB43CpMPaT244mz2NE7X141tk&dl=O54r9h3WJFCjSHzBJtlLxTDxz0tatHGN6DQYUhUIouH&wnd=1&module=im);
   background-blend-mode: ;
   background-color: #005f89;
   background-size: cover;
