--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,7 @@ width: 100%;
 
 #overview {
   float: left;
-  background-image: url(https://psv4.userapi.com/c536132/u506838934/docs/d42/40bf2266e62d/ptichka.gif?extra=Ko-DtL1X7Lzw6FNXWZgR7xQgqMs4ZZovxWRWc3OGqbK_deuOda4cZOT9c8xqC1BZeTSuP-j1BbH1U2IvnxhWN679YbCgVsO5vDDOICY1mhmBeJuZe0qz8sAQTJden3q17z-QkXYd7oCPXv5b_lgvUvk);
+  background-image: url(https://vk.com/doc506838934_621720184?hash=hacoDxWHVQlZfD97FWFphXWr1fdbE11EzJRlL4TAq68&dl=TTSWRp1EpNk6fPls0VNotzpth6D2SzjUzM0BvvAr32w&wnd=1&module=im&mp4=1);
 
   background-blend-mode: multiply;
   background-color: #403f40;
